--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "spotify-clone",
   "version": "0.1.0",
-  "private": true,
   "dependencies": {
     "@emotion/core": "^10.0.10",
-    "@emotion/styled": "^10.0.12",
     "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^10.0.12",
     "@fontsource/roboto": "^4.5.0",
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.11.2",
@@ -13,9 +12,10 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "babel-plugin-styled-components": "^1.10.1",
     "axios": "^0.21.1",
+    "babel-plugin-styled-components": "^1.10.1",
     "chart.js": "^3.5.0",
+    "firebase": "^8.10.0",
     "formik": "^2.2.9",
     "randomcolor": "^0.6.2",
     "react": "^17.0.2",
@@ -27,7 +27,8 @@
     "react-scripts": "4.0.3",
     "react-trend": "^1.2.5",
     "styled-components": "^5.3.0",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
