--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://imohammednayeem.github.io/reactSongs/",
   "name": "spotify-clone",
   "version": "0.1.0",
   "dependencies": {
@@ -31,6 +32,8 @@
     "yup": "^0.32.9"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -54,6 +57,7 @@
   "devDependencies": {
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
     "enzyme": "^3.11.0",
+    "gh-pages": "^3.2.3",
     "react-test-renderer": "^17.0.2"
   }
 }
