--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://imohammednayeem.github.io/reactSongs/",
+  "homepage": "https://imohammednayeem.github.io/spotifyClone/",
   "name": "spotify-clone",
   "version": "0.1.0",
   "dependencies": {
